[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "asyncer"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
description = "Asyncer, async and await, focused on developer experience."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sebastián Ramírez", email = "tiangolo@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Typing :: Typed",
]
dependencies = [
    "anyio >=3.4.0,<5.0",
    "sniffio >=1.1",
    # for Unpack, 3.15
    "typing_extensions >=4.12.0; python_version < '3.15'"
]

[project.urls]
Homepage = "https://github.com/fastapi/asyncer"
Documentation = "https://asyncer.tiangolo.com"
Repository = "https://github.com/fastapi/asyncer"
Issues = "https://github.com/fastapi/asyncer/issues"
Changelog = "https://asyncer.tiangolo.com/release-notes/"

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "tests" },
    "prek>=0.2.24,<1.0.0",
]
docs = [
    "cairosvg==2.8.2",
    "griffe-typingdoc==0.3.0",
    "griffe-warnings-deprecated==1.1.0",
    "markdown-include-variants==0.0.8",
    "mdx-include>=1.4.1,<2.0.0",
    "mkdocs-macros-plugin==1.5.0",
    "mkdocs-material==9.7.2",
    "mkdocs-redirects>=1.2.1,<1.3.0",
    "mkdocstrings[python]==0.30.1",
    "pillow==11.3.0",
    "pyyaml>=5.3.1,<7.0.0",
    "typer==0.23.2",
    "zensical==0.0.15; python_version >= '3.10'",
]
github-actions = [
    "httpx>=0.27.0,<0.29.0",
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "pygithub>=2.3.0,<3.0.0",
    "smokeshow>=0.5.0",
]
tests = [
    "coverage[toml]>=6.2,<8.0",
    "mypy==1.19.1",
    "pytest>=7.4.0,<9.0.0",
    "ruff==0.15.2",
]

[tool.pdm]
version = { source = "file", path = "asyncer/__init__.py" }
distribution = true

[tool.pdm.build]
source-includes = [
    "tests/",
    "docs_src/",
    "scripts/",
]

[tool.tiangolo._internal-slim-build.packages.asyncer-slim.project]
name = "asyncer-slim"
readme = "asyncer-slim/README.md"
dependencies = [
    "asyncer",
]
optional-dependencies = {}
scripts = {}

[tool.tiangolo._internal-slim-build.packages.asyncer-slim.tool.pdm.build]
# excludes needs to explicitly exclude the top level python packages,
# otherwise PDM includes them by default
# A "*" glob pattern can't be used here because in PDM internals, the patterns are put
# in a set (unordered, order varies) and each excluded file is assigned one of the
# glob patterns that matches, as the set is unordered, the matched pattern could be "*"
# independent of the order here. And then the internal code would give it a lower score
# than the one for a default included file.
# By not using "*" and explicitly excluding the top level packages, they get a higher
# score than the default inclusion
excludes = ["asyncer", "docs_src", "tests", "pdm_build.py"]
# source-includes needs to explicitly define some value because PDM will check the
# truthy value of the list, and if empty, will include some defaults, including "tests",
# an empty string doesn't match anything, but makes the list truthy, so that PDM
# doesn't override it during the build.
source-includes = [""]

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "docs_src",
    "tests",
    "asyncer"
]
relative_files = true
context = '${CONTEXT}'
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"
omit = [
    "docs_src/tutorial/soonify_return/tutorial002_py310.py",
]

[tool.coverage.html]
show_contexts = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "docs_src.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_no_return = false

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["asyncer", "anyio"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
